feat: ✨ Add external map link, enhance user navigation
fix: 🐛 Update WhatsApp contact, correct phone number

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <span class="iconify" data-icon="lucide:phone-call" data-width="18"></span>
                             Call Now
                         </a>
-                        <a href="#location" class="inline-flex justify-center items-center gap-2 bg-white text-[#263238] border border-slate-200 px-8 py-3.5 rounded-xl font-medium hover:bg-slate-50 transition-all">
+                        <a href="https://www.google.com/maps/dir/?api=1&destination=13+Moonlight+House,+5th+Street,+Gweru,+Zimbabwe" target="_blank" class="inline-flex justify-center items-center gap-2 bg-white text-[#263238] border border-slate-200 px-8 py-3.5 rounded-xl font-medium hover:bg-slate-50 transition-all">
                             <span class="iconify" data-icon="lucide:map-pin" data-width="18"></span>
                             Visit Our Clinic
                         </a>
@@ -347,7 +347,7 @@
                     </div>
 
                     <div class="mt-10 flex flex-col sm:flex-row gap-4 items-center">
-                        <a href="https://wa.me/263772746308" target="_blank" class="w-full sm:w-auto inline-flex justify-center items-center gap-2 bg-[#25D366] text-white px-6 py-3 rounded-xl font-medium hover:bg-[#128C7E] transition-all">
+                        <a href="https://wa.me/263718166821" target="_blank" class="w-full sm:w-auto inline-flex justify-center items-center gap-2 bg-[#25D366] text-white px-6 py-3 rounded-xl font-medium hover:bg-[#128C7E] transition-all">
                             <span class="iconify" data-icon="lucide:message-circle" data-width="20"></span>
                             WhatsApp Us
                         </a>
@@ -378,7 +378,7 @@
                 <a href="tel:+263772746308" class="inline-flex justify-center items-center gap-2 bg-white text-[#2E7D32] px-8 py-3.5 rounded-xl font-medium hover:bg-[#E8F5E9] transition-all">
                     Call Now
                 </a>
-                <a href="#location" class="inline-flex justify-center items-center gap-2 bg-[#1B5E20] border border-[#66BB6A]/30 text-white px-8 py-3.5 rounded-xl font-medium hover:bg-[#1B5E20]/80 transition-all">
+                <a href="https://www.google.com/maps/dir/?api=1&destination=13+Moonlight+House,+5th+Street,+Gweru,+Zimbabwe" target="_blank" class="inline-flex justify-center items-center gap-2 bg-[#1B5E20] border border-[#66BB6A]/30 text-white px-8 py-3.5 rounded-xl font-medium hover:bg-[#1B5E20]/80 transition-all">
                     Get Directions
                 </a>
             </div>
